# AnatomicStructuresSegmentation

./: .gitignore  README.md  balanced_indices.npy  pyproject.toml  requirements.txt
0_LiteratureReview/: README.md
1_DatasetCharacteristics/: README.md  dataexpl.ipynb  exploratory_data_analysis(1).ipynb  exploratory_data_analysis.ipynb  exploratory_data_analysis1.ipynb
2_BaselineModel/: README.md  baseline_model.ipynb  baseline_model_raidium.ipynb  raidium_baseline_colab.ipynb
3_Model/: README.md  model_definition_evaluation.ipynb  model_definition_evaluation_gpu.ipynb  raidium_pretrained_4models.ipynb
