# numpy, pandas, scipy  — data loading and DICE evaluation
# opencv-python         — fast image loading (load_dataset)
# scikit-image          — watershed baseline
# Pillow                — image resize fallback
# scikit-learn          — K-Means baseline
# torch, torchvision    — ShallowSegNet and U-Net (CPU build, ~230 MB vs 2 GB CUDA)
# psutil                — RAM check before training
# jupyter, ipykernel    — run .ipynb notebooks
# matplotlib            — all plots
# tqdm                  — progress bars

[project]
name = "ct-segmentation"
version = "0.1.0"
description = "CT scan anatomical structure segmentation — course project"
requires-python = ">=3.10,<3.13"

dependencies = [
    # Data handling
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",

    # Image I/O and processing
    "opencv-python>=4.8",
    "scikit-image>=0.21",
    "Pillow>=10.0",

    # Machine learning
    "scikit-learn>=1.3",

    # Deep learning — CPU build of PyTorch (no CUDA, smaller download)
    # Windows CPU wheel is published under the +cpu local version tag
    "torch>=2.1.0",
    "torchvision>=0.16.0",

    # System monitoring
    "psutil>=5.9",

    # Notebook and visualisation
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "matplotlib>=3.7",
    "tqdm>=4.65",
]

[tool.uv.sources]
# Force the CPU-only PyTorch index so uv never pulls a 2 GB CUDA wheel
torch = [
    { index = "pytorch-cpu" }
]
torchvision = [
    { index = "pytorch-cpu" }
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
